--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Eat Faves!</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -12,7 +12,81 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body class="container-fluid">
-      <h1>Example</h1>
+  <nav class="navbar fixed-top">
+    <ul class="nav navbar-nav">
+      <li class="restaurant-crude"><a>Add New Fave</a></li>
+      <li class="restaurant-crude"><a>Edit A Fave</a></li>
+      <li class="restaurant-crude"><a>Find A Fave</a></li>
+      <li class="restaurant-crude"><a>View All Faves</a></li>
+      <li class="restaurant-crude"><a>Delete A Fave</a></li>
+      <li class="signup-link"><a>Create Account</a></li>
+      <li class="signin-link"><a>Sign In</a></li>
+      <li class="managepassword-link"><a>Manage Password</a></li>
+      <li class="signout-link"><a>Sign Out</a></li>
+    </ul>
+</nav>
+
+<div class="auth sign-up-nav">
+  <form id="sign-up">
+    <input name="credentials[email]" type="text" placeholder="E-mail">
+    <input name="credentials[password]" type="password" placeholder="Password">
+    <input name="credentials[password_confirmation]" type="password" placeholder="Confirm Password">
+    <button type="submit" class="btn btn-default">Create New User</button>
+  </form>
+  </div>
+
+<div class="auth sign-in-nav">
+  <form id="sign-in">
+  <input name="credentials[email]" type="text" placeholder="E-mail">
+  <input name="credentials[password]" type="password" placeholder="Password">
+  <button type="submit" class="btn btn-default">Sign In</button>
+</form>
+</div>
+
+<div class="auth change-password-nav">
+  <form id="change-password">
+  <input name="passwords[old]" type="password" placeholder="Old Password">
+  <input name="passwords[new]" type="password" placeholder="New Password">
+  <button type="submit" class="btn btn-default">Change Password</button>
+  </form>
+</div>
+
+<div class="auth-text">
+<p class="auth-message"></p>
+</div>
+      <h1>Fave Restaurants</h1>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+      est laborum.</p>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+      est laborum.</p>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+      est laborum.</p>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+      est laborum.</p>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
       eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
