Removed delete link at the top of the navbar
Removed the delete link at the top of the navigation bar because users
will be able to delete the restaurants when it is displayed in show all.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       <li class="update-fave-link restaurant-crude"><a>Edit A Fave</a></li>
       <li class="show-fave-link restaurant-crude"><a>Find A Fave</a></li>
       <li class="index-fave-link restaurant-crude"><a>View All Faves</a></li>
-      <li class="delete-fave-link restaurant-crude"><a>Delete A Fave</a></li>
       <li class="signup-link"><a>Create Account</a></li>
       <li class="signin-link"><a>Sign In</a></li>
       <li class="managepassword-link"><a>Manage Password</a></li>
@@ -86,6 +85,6 @@
       </form>
       </div>
 
-      <div class="restaurant-content"></div>
+      <div class="restaurant-divs restaurant-content"></div>
     </body>
 </html>
