--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Eat Faves!</title>
+      <title>Ate@</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-
       <!-- Do not add `link` tags-->
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
@@ -53,7 +52,7 @@
 <div class="auth-text">
 <p class="auth-message"></p>
 </div>
-      <h1>Fave Restaurants</h1>
+      <h1>Ate@</h1>
   <div class="restaurant-text">
   <p class="restaurant-message"></p>
   </div>
