Add in brief description for the application

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <p class="auth-message"></p>
 </div>
       <h1>Ate@</h1>
+      <p>An app to help you keep track of restuarants you have visited!</p>
   <div class="restaurant-text">
   <p class="restaurant-message"></p>
   </div>
